# prwx-fastapi-render

./: .dockerignore  .gitignore  404.html  ACCESSIBILITY_WAVE_ES.md  ACTIVE_ALERTS_HARDENED_V17_ES.md  ADVANCED_ARCHITECTURE_ES.md  ALERT_DISPLAY_V12_ES.md  ANDROID_APP_BRIDGE_V20_ES.md  AUTOMATION_ES.md  CHANGELOG.md  DISCLAIMER.md  DOCKER_ES.md  Dockerfile  Dockerfile.render  EMERGENCY_DISPLAY_V11_ES.md  GITHUB_UPLOAD_ES.md  HURRICANES_SEISMIC_V13_ES.md  IMMERSIVE_V6_ES.md  IMMERSIVE_V7_ES.md  IMMERSIVE_V8_ES.md  LICENSE  MRMS_FIX_LIFE_SAFETY_V18_ES.md  MRMS_REAL_RADAR_V16_ES.md  MRMS_RESILIENCE_V15_ES.md  Procfile  QUICKSTART_ES.md  RADAR_CONE_ALERTS_V14_ES.md  README.md  REALTIME_V10_ES.md  REALTIME_V9_ES.md  RENDER_GITHUB_FASTAPI_ES.md  SERVICE_ANDROID_VERIFICATION_V19_ES.md  STREAMLIT_DEPLOY_ES.md  WEB_MOBILE_BRIDGE_V22_ES.md  WEB_READY_HARDENED_V23_ES.md  android_sensor_bridge_README_ES.md  docker-compose.yml  index.html  pyproject.toml  render.yaml  (+39 more)
.streamlit/: config.toml
android_sensor_app/: local.properties  settings.gradle.kts
api/: app.py
config/: settings.yaml
dashboard/: app.py
mobile/: README_MOBILE_ES.md  app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
models/: prwx_advanced_bias_model.joblib
reports/: arquitectura_modelo_pr.md  fuentes_de_datos.md  plan_de_implementacion.md  v3_mejoras.md  v4_mejoras.md  v5_mejoras.md
scripts/: 01_download_nws_sample.py  02_build_training_table.py  03_train_bias_model.py  04_predict_sample.py  05_download_nws_live.py  06_predict_live_nws.py  07_update_live_pipeline.py  (+27 more)
(+161 files in other folders)
