[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prwx-hybrid-model"
version = "1.0.0"
description = "Modelo meteorologico hibrido en tiempo real con temperatura, lluvia, viento y alertas sismicas/tsunami para Puerto Rico"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "streamlit>=1.36",
  "plotly>=5.22",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
